fixed image positioning so image doesn't stretch grid box

--- a/static/styles.css
+++ b/static/styles.css
@@ -84,6 +84,13 @@ h1 {
   border-radius: 10px;
   overflow: hidden;
   transition: transform 0.3s, box-shadow 0.3s;
+
+
+  width: 150px;      
+  height: 150px;    
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
 
 
@@ -96,6 +103,6 @@ h1 {
 .box img {
   width: 100%;
   height: 100%;
-  object-fit: cover;
+  object-fit: contain;
   display: block;
 }
